# camera-stream

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: __init__.py  cameras.py  main.py  player.py  settings.py  streaming.py
app/templates/: player.html
