[project]
name = "camera-stream"
version = "0.1.0"
description = ""
authors = [
    {name = "TyPaporotnyk",email = "daniil.svadkovsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
include = ["app/templates/*.html"]
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]

[project.scripts]
camera-stream = "app.main:run"


[tool.poetry]
packages = [{ include = "app" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
